welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: '(' expected but identifier found.
	if num < 2 taille = 2;
           ^golomb:4: error: illegal start of simple expression
	if num < 2 taille = 2;
                             ^